--- a/package.json
+++ b/package.json
@@ -12,13 +12,10 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@babel/core": "^7.24.5",
-    "@babel/parser": "^7.24.4",
-    "@babel/traverse": "^7.24.1",
-    "@babel/types": "^7.24.0",
     "chalk": "4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "esprima": "^4.0.1",
     "express": "^4.19.2",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
