--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kottster/backend",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Kottster - no-code platform for building internal apps incredibly fast",
   "main": "dist/index.js",
   "license": "Apache-2.0",
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "knex-paginate": "^3.1.2",
+    "mssql": "^10.0.2",
     "mysql2": "^3.9.7",
     "pg": "^8.11.5"
   },
